
----------------
Release v93
----------------

General:
-new fixture types: ROBOT3-CE, PACKOUT-CE
-allow fixture names up to 10char on display (compress x-scaling for long names)

ROBOT3[-CE]:
-write color code into robot (code written depends on standard/-CE fixture mode)
^Note: requires v93+ body firmware; modified cmd data with new color codes.

PACKOUT[-CE]:
-read/verify proper color code is set (code verified depends on standard/-CE fixture mode)
^Note: requires v93+ body firmware; modified cmd data with new color codes.

MOTOR3L,MOTOR3H:
-motor low-speed test, increased power to 1.5V for reliability with new gearbox & fixture circuit.

ROBOT1,ROBOT2,ROBOT3[-CE],PACKOUT[-CE]:
-added charge-current test; verfies charging circuit ok

BODY3,ROBOT1,ROBOT2,ROBOT3[-CE],PACKOUT[-CE]:
-added battery check. low VBat causes error 621 [BAT_UNDERVOLT].
^Note: requires v93+ body firmware; bug-fix to properly report battery voltage.

RECHARGE:
-stop charging (OK) at 3.75V. error 101 [TIMEOUT] after 10min if still charging (not holding charge, or significantly dead battery).
^Note: requires v93+ body firmware; bug-fix allows robot to stay on/charging for >120s.

BODY1:
-add encoder test; basic on/off part validation.
^Note: requires v93+ body firmware; adds encoder test command.

BODY1,BODY2,BODY3:
-add test for backpack button pull-up resistor.
^Note: requires v93+ body firmware; adds backpack resistor test command.


----------------
Release v92
----------------

PACKOUT:
-add backpack button test (same as ROBOT1,2,3)

MOTORx:
-updated tests to match Vigor/EL assembly stages (see MOTORx test matrix).


----------------
Release v91
----------------

Backpack button test (MOTOR2H,ROBOT1,ROBOT2,ROBOT3):
-test for stuck button. error 656 [BACKPACK_BTN_RELEASE_TIMEOUT]

MOTOR1x,MOTOR2x:
-more reliable insertion; delay and retest if fails on first try (some failures due to operator insertion too slow).


----------------
Release v90/c90
----------------

MOTOR2H,MOTOR2L: